# gc-finance

./: .env.example  .gitignore  README.md  finance.py  forex.py  gnucash.py  main.py  pyproject.toml  requirements.txt
backends/: factory.py
backends/xml/: namespaces.py  nodes.py  serializer.py
src/gc-finance/: finance.py  forex.py  gnucash.py
src/gc-finance/backends/: factory.py
src/gc-finance/backends/xml/: nodes.py  serializer.py
src/gc-finance/scripts/: __init__.py
